--- a/nanoc/layouts/default.html
+++ b/nanoc/layouts/default.html
@@ -20,12 +20,6 @@
         <li><a href="http://twitter.com/fritzvd">Twitter</a></li>
         <li><a href="http://github.com/fritzvd">Github</a></li>
       </ul>
-      <!--<h2>Community</h2>
-      <ul>
-        <li><a href="http://groups.google.com/group/nanoc/">Discussion Group</a></li>
-        <li><a href="irc://chat.freenode.net/#nanoc">IRC Channel</a></li>
-        <li><a href="http://github.com/nanoc/nanoc/wiki/">Wiki</a></li>
-      </ul>
-    </div>-->
+    </div>
   </body>
 </html>
