--- a/game.scss
+++ b/game.scss
@@ -1,9 +1,48 @@
 body {
-  overflow:hidden;
-  background: #77404F;
+  overflow: hidden;
+  color: white;
+  font-family: sans;
+  background: #333;
 }
 
 canvas {
 	float: left;
 	// transform: scale(.75) translate(-10%, -20%);
+}
+
+#help-button {
+  color: white;
+  cursor: pointer;
+  &:hover {
+    color: #ddd;
+  }
+}
+
+nav {
+  background: #333;
+  padding-bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+ul li {
+  list-style: none;
+  display: inline;
+
+  a {
+    color: white;
+    text-decoration: none;
+    &:hover {
+      color: #ddd;
+      // transition: color ease-in 0.5s;
+    }
+    &:active {
+      color: #ddd;
+      // transition: color ease-in 0.5s;
+    }
+    &:visited {
+      color: #ddd;
+      // transition: color ease-in 0.5s;
+    }
+  }
 }
